# tutor-stack-assessment

./: .flake8  DEPLOYMENT.md  Dockerfile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml  update-root.yml
app/: __init__.py
tests/: conftest.py  test_assessment.py
tutor_stack_assessment/: __init__.py  main.py
